--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -13,6 +13,9 @@
     <div class="wrapper">
         <div class="test">
             <h1>Hello World</h1>
+            <h1>Hello World</h1>
+            <h1>Hello World</h1>
+            <h1>Hello World</h1>
         </div>
     </div>
 </body>
