--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -13,6 +13,7 @@
     <div class="wrapper">
         <div class="test">
             <h1>Hello World</h1>
+            <a href="/test"><button class="btn btn-success">Click Me</button></a>
         </div>
     </div>
 </body>
