--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -10,9 +10,27 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
+    <div class="header">
+        <div class="header-left">
+            <h3>Weather App</h3>
+        </div>
+        <div class="header-right">
+            <p>Login</p>
+            <p>Login</p>
+            <p>Login</p>
+        </div>
+    </div>
     <div class="wrapper">
-        <div class="test">
-            <h1>Hello World</h1>
+        <div class="weather">
+            <form action="weather" method="POST">
+                <p>City:</p>
+                <input type="text" name="city" id="city">
+
+                <p>State:</p>
+                <input type="text" name="state" id="state">
+
+                <button class="btn btn-success">Submit</button>
+            </form>
         </div>
     </div>
 </body>
