--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -15,22 +15,22 @@
             <h3>Weather App</h3>
         </div>
         <div class="header-right">
-            <p>Login</p>
-            <p>Login</p>
-            <p>Login</p>
+            <a href="">Login</a>
         </div>
     </div>
     <div class="wrapper">
         <div class="weather">
             <form action="weather" method="POST">
-                <p>City:</p>
-                <input type="text" name="city" id="city">
-
-                <p>State:</p>
-                <input type="text" name="state" id="state">
-
-                <button class="btn btn-success">Submit</button>
+                <input type="text" name="city" id="city" placeholder="City Name">
+                <input type="submit" value="Get Weather" id="button">
             </form>
+        </div>
+        <div class="favorites">
+            <h3>favorites placeholder</h3>
+            <h3>favorites placeholder</h3>
+            <h3>favorites placeholder</h3>
+            <h3>favorites placeholder</h3>
+            <h3>favorites placeholder</h3>
         </div>
     </div>
 </body>
