--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -32,6 +32,23 @@
             <h3>favorites placeholder</h3>
             <h3>favorites placeholder</h3>
         </div>
+        {% for user in users %}
+            <p>{{user.first_name}} {{user.last_name}}</p>
+        {% endfor %}
+        <form action="register" method="POST">
+            {% csrf_token %}
+            <p>First Name:</p>
+            <input type="text" name="fname">
+            <p>Last Name:</p>
+            <input type="text" name="lname">
+            <p>Email:</p>
+            <input type="text" name="email">
+            <p>Password:</p>
+            <input type="text" name="pass">
+            <p>Password Confirmation:</p>
+            <input type="text" name="confirmPass"><br>
+            <input type="submit" value="Register" id="register">
+        </form>
     </div>
 </body>
 </html>
