--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -18,12 +18,15 @@
             <a href="/login">Login</a>
         </div>
     </div>
+    
     <div class="wrapper">
         <div class="weather">
             <form action="weather" method="POST">
                 <input type="text" name="city" id="city" placeholder="City Name">
                 <input type="submit" value="Get Weather" id="button">
             </form>
+            {{weather.temp}}
+            {{weather.city}} - {{weather.country_code}}
         </div>
         <div class="favorites">
             <h3>favorites placeholder</h3>
