--- a/apps/weather_app/static/style.css
+++ b/apps/weather_app/static/style.css
@@ -30,6 +30,23 @@
 }
 .weather{
     text-align: center;
+    height: 100%;
+    padding: 10px;
+}
+.stat_box {
+    margin-top: 50px;
+    padding: 10px;
+    border-radius: 10px;
+    background: rgb(236,236,236);
+    background: linear-gradient(0deg, rgba(236,236,236,1) 0%, rgba(248,255,255,1) 49%, rgba(236,236,236,1) 100%);
+    height: 200px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+.stats {
+    width: 100%;
+    text-align: center;
 }
 #button {
     background-color: rgb(51, 189, 235);
