--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -26,9 +26,13 @@
                 <input type="text" name="city" id="city" placeholder="City Name">
                 <input type="submit" value="Get Weather" id="button">
             </form>
-            {{weather.temp_c}} / {{weather.temp_f}}
-            {{weather.city}} - {{weather.country_code}} <br>  
-            {{ weather.weather_type }}
+            <div class="stat_box">
+                <div class="stats">
+                    {{weather.temp_c}} / {{weather.temp_f}}
+                    {{weather.city}} - {{weather.country_code}} <br>  
+                    {{ weather.weather_type }}
+                </div>
+            </div>
         </div>
         <div class="favorites">
             <h3>favorites placeholder</h3>
