--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -18,8 +18,6 @@
             <a href="/login">Login</a>
         </div>
     </div>
-    
-    {{ api }}
     <div class="wrapper">
         <div class="weather">
             {% if messages %}
@@ -37,8 +35,8 @@
             <div class="stat_box">
                 <div class="stats">
                     <h1>{{request.session.current_city.temp_c}} / {{request.session.current_city.temp_f}}</h1>
-                    {{request.session.current_city.city}} - {{request.session.current_city.country_code}} <br>  
-                    {{ request.session.current_city.weather_type }}
+                    <p>{{request.session.current_city.city}} - {{request.session.current_city.country_code}}</p> 
+                    <p>{{ request.session.current_city.weather_type }}</p>
                 </div>
             </div>
         </div>
