--- a/apps/weather_app/static/style.css
+++ b/apps/weather_app/static/style.css
@@ -6,6 +6,7 @@
     padding: 20px 20% 0px 20%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .header{
     display: flex;
@@ -30,7 +31,8 @@
 .weather{
     text-align: center;
     height: 100%;
-    padding: 10px;
+    /* border: 1px solid black; */
+    flex: 1;
 }
 .stat_box {
     margin-top: 50px;
@@ -46,6 +48,11 @@
 .stats {
     width: 100%;
     text-align: center;
+}
+.favorites {
+    /* border: 1px solid black; */
+    flex: 1;
+    text-align: right;
 }
 #button {
     background-color: rgb(51, 189, 235);
