--- a/apps/weather_app/static/style.css
+++ b/apps/weather_app/static/style.css
@@ -54,9 +54,26 @@
     flex: 1;
     text-align: right;
 }
+#city {
+    border-radius: 10px;
+    height: 50px;
+    padding: 0px 5px 0px 5px;
+    transition: 0.3s;
+}
+#city:focus {
+    padding: 0px 15px 0px 15px;
+    transition: 0.3s;
+}
 #button {
-    background-color: rgb(51, 189, 235);
-    color: white;
+    height: 50px;
     padding: 2px 5px 2px 5px;
+    border-radius: 10px;
     border: 0px;
+    background-color: rgb(26, 190, 163);
+    color: white;
+    transition: 0.3s;
+}
+#button:hover {
+    background-color: rgb(73, 175, 223);
+    transition: 0.3s;
 }
