changed input placeholder

--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -29,7 +29,7 @@
             {% endif %}
             <form action="weather" method="POST">
                 {% csrf_token %}
-                <input type="text" name="city" id="city" placeholder="City Name">
+                <input type="text" name="city" id="city" placeholder="City Name..">
                 <input type="submit" value="Get Weather" id="button">
             </form>
             <div class="stat_box">
