--- a/apps/weather_app/static/style.css
+++ b/apps/weather_app/static/style.css
@@ -34,20 +34,17 @@
     /* border: 1px solid black; */
     flex: 1;
 }
+
 .stat_box {
     margin-top: 50px;
     padding: 10px;
     border-radius: 10px;
     background: rgb(236,236,236);
     background: linear-gradient(0deg, rgba(236,236,236,1) 0%, rgba(248,255,255,1) 49%, rgba(236,236,236,1) 100%);
-    height: 200px;
+    height: 300px;
     display: flex;
     align-items: center;
-    text-align: center;
-}
-.stats {
-    width: 100%;
-    text-align: center;
+    justify-content: center;
 }
 .favorites {
     /* border: 1px solid black; */
@@ -57,7 +54,7 @@
 #city {
     border-radius: 10px;
     height: 50px;
-    padding: 0px 5px 0px 5px;
+    width: 60%;
     transition: 0.3s;
 }
 #city:focus {
