started login page

--- a/apps/weather_app/templates/login.html
+++ b/apps/weather_app/templates/login.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'login.css' %}">
 </head>
 <body>
     <div class="wrapper">
@@ -15,24 +17,32 @@
             {% endfor %}
             </div>
         {% endif %}
-        
-        {% for user in users %}
-            <p>{{user.first_name}} {{user.last_name}}</p>
-        {% endfor %}
-        <form action="register" method="POST">
-            {% csrf_token %}
-            <p>First Name:</p>
-            <input type="text" name="fname">
-            <p>Last Name:</p>
-            <input type="text" name="lname">
-            <p>Email:</p>
-            <input type="text" name="email">
-            <p>Password:</p>
-            <input type="text" name="pass">
-            <p>Password Confirmation:</p>
-            <input type="text" name="confirmPass"><br>
-            <input type="submit" value="Register" id="register">
-        </form>
+        <div class="register">
+            <form action="register" method="POST">
+                {% csrf_token %}
+                <p>First Name:</p>
+                <input type="text" name="fname">
+                <p>Last Name:</p>
+                <input type="text" name="lname">
+                <p>Email:</p>
+                <input type="text" name="email">
+                <p>Password:</p>
+                <input type="text" name="pass">
+                <p>Password Confirmation:</p>
+                <input type="text" name="confirmPass"><br><br>
+                <input type="submit" value="Register" id="register">
+            </form>
+        </div>
+        <div class="login">
+            <form action="register" method="POST">
+                {% csrf_token %}
+                <p>Email:</p>
+                <input type="text" name="email">
+                <p>Password:</p>
+                <input type="text" name="pass"><br><br>
+                <input type="submit" value="Login" id="register">
+            </form>
+        </div>
     </div>
 </body>
 </html>
