switched to using partial for banner and removed previous code

--- a/apps/weather_app/templates/login.html
+++ b/apps/weather_app/templates/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'login.css' %}">
 </head>
 <body>
+    {% include 'banner.html' %}
     <div class="wrapper">
         {% if messages %}
             <div>
