--- a/apps/weather_app/static/login.css
+++ b/apps/weather_app/static/login.css
@@ -1,5 +1,9 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
 .wrapper {
     padding: 0px 20% 0px 20%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
