--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -10,14 +10,15 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-    <div class="header">
+    {% include 'banner.html' %}
+    <!-- <div class="header">
         <div class="header-left">
             <h3>Weather App</h3>
         </div>
         <div class="header-right">
             <a href="/login">Login</a>
         </div>
-    </div>
+    </div> -->
     <div class="wrapper">
         <div class="weather">
             {% if messages %}
