--- a/apps/weather_app/static/banner.css
+++ b/apps/weather_app/static/banner.css
@@ -3,13 +3,14 @@
     align-items:center;
     justify-content: space-between;
     font-size: larger;
-    padding: 10px 20% 10px 20%;
+    padding: 0px 20% 0px 20%;
     margin-bottom: 20px;
     height: 70px;
     background-color: rgb(26, 190, 163);
     color: white;
 }
-a {
-    color: white;
+
+.header-left h3 a, .header-right a{
     text-decoration: none;
+    color: white;
 }
