--- a/apps/weather_app/static/login.css
+++ b/apps/weather_app/static/login.css
@@ -15,7 +15,7 @@
     border: 0;
 }
 .login, .register {
-    border: 1px solid black;
+    width: 40%;
     padding: 10px;
     height: 100%;
     margin-right: 10px;
