--- a/apps/weather_app/templates/banner.html
+++ b/apps/weather_app/templates/banner.html
@@ -14,7 +14,11 @@
             <h3><a href="/">Weather App</a></h3>
         </div>
         <div class="header-right">
-            <a href="/login">Login</a>
+            {% if not current_user %}
+                <a href="/login">Login</a>
+            {% else %}
+                <a href="/logout">Logout</a>
+            {% endif %}
         </div>
     </div>
 </body>
