--- a/apps/weather_app/templates/login.html
+++ b/apps/weather_app/templates/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     {% include 'banner.html' %}
-    <div class="wrapper">
+    <div class="text-center">
         {% if messages %}
             <div>
             {% for message in messages %}
@@ -19,6 +19,8 @@
             {% endfor %}
             </div>
         {% endif %}
+    </div>
+    <div class="wrapper">
         <div class="register">
             <div class="text-center">
                 <h1>Register</h1>
@@ -42,7 +44,7 @@
             <div class="text-center">
                 <h1>Login</h1>
             </div>
-            <form action="login" method="POST">
+            <form action="user-login" method="POST">
                 {% csrf_token %}
                 <p>Email:</p>
                 <input type="text" name="email">
