got login working, user ID stored in session

--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -34,6 +34,7 @@
             </div>
         </div>
         <div class="favorites">
+            {{ current_user.first_name }}
             <h3>favorites placeholder</h3>
             <h3>favorites placeholder</h3>
             <h3>favorites placeholder</h3>
