--- a/apps/weather_app/static/style.css
+++ b/apps/weather_app/static/style.css
@@ -2,9 +2,11 @@
     margin: 0px;
     padding: 0px;
 }
+.flexed {
+    display: flex;
+}
 .wrapper {
     padding: 0px 20% 0px 20%;
-    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
@@ -22,9 +24,19 @@
     border-radius: 10px;
     background: linear-gradient(0deg, rgba(236,236,236,1) 0%, rgba(248,255,255,1) 49%, rgba(236,236,236,1) 100%);
     height: 300px;
-    display: flex;
+}
+.stat_box-top img {
+    width: 30px;
+    text-align: right;
+    cursor: pointer;
+}
+.stat_box-bottom {
     align-items: center;
     justify-content: center;
+
+}
+.stat_box-top {
+    height: 50px;
 }
 .favorites {
     /* border: 1px solid black; */
