--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     {% include 'banner.html' %}
-    <div class="wrapper">
+    <div class="wrapper flexed">
         <div class="weather">
             {% if messages %}
                 <div>
@@ -26,10 +26,18 @@
                 <input type="submit" value="Get Weather" id="button">
             </form>
             <div class="stat_box">
-                <div>
-                    <h1>{{request.session.current_city.temp_c}} / {{request.session.current_city.temp_f}}</h1>
-                    <p>{{request.session.current_city.city}} - {{request.session.current_city.country_code}}</p>
-                    <p>{{ request.session.current_city.weather_type }}</p>
+                <div class="stat_box-top text-right mb-4">
+                    <form action="/favorite">
+                        <img src="../static/images/unfavorited.png" alt="">
+                        <input type="hidden" name="city" value="{{request.session.current_city.city}}">
+                    </form>
+                </div>
+                <div class="stat_box-bottom flexed">
+                    <div>
+                        <h1>{{request.session.current_city.temp_c}} / {{request.session.current_city.temp_f}}</h1>
+                        <p>{{request.session.current_city.city}} - {{request.session.current_city.country_code}}</p>
+                        <p>{{ request.session.current_city.weather_type }}</p>
+                    </div>
                 </div>
             </div>
         </div>
