--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -45,7 +45,7 @@
                         {% endfor %}
                     </form>
                 </div>
-                <div class="stat_box-bottom flexed">
+                <div class="stat_box_bottom flexed">
                     <div>
                         <h1>{{request.session.current_city.temp_c}} / {{request.session.current_city.temp_f}}</h1>
                         <p>{{request.session.current_city.city}} - {{request.session.current_city.country_code}}</p>
