--- a/apps/weather_app/templates/index.html
+++ b/apps/weather_app/templates/index.html
@@ -62,9 +62,11 @@
                 {%for favorite in favorites%}
                 <div class="favorite flexed">
                     <div class="favorite-left">
+                        <p>placeholder</p>
+                    </div>
+                    <div class="favorite-middle">
                         <p>{{favorite.city}}</p>
-                        <p>{{favorite.temp_c}}</p>
-                        <p>{{favorite.temp_f}}</p>
+                        <p>{{favorite.temp_c}} / {{favorite.temp_f}}</p>
                     </div>
                     <div class="favorite-right">
                         <form action="/delete" method="POST">
